<resources>
    <string name="app_name">About_Dogs</string>
    <string name="action_settings">Settings</string>
    <string name="logo">The logo of "About Dogs"</string>
    <string name="home">Backgrounf of the home page</string>
    <string name="button_picture_text">Search a picture of a breed of dogs</string>
    <string name="button_picture_facts">Learn a random facts about dogs</string>
    <string name="title_facts">Random facts about dogs</string>
    <string name="title_breed_search">Random pictures of a breed</string>
    <string name="button_breed_search"> Show me this breed ! </string>
    <string name="title_breed_result">Random pictures of test </string>
    <string name="title_activity_show_breed">ShowBreed</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>
