<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B17C7E"
    tools:context=".ChooseBreed">

    <TextView
        android:id="@+id/textView_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title_breed_search"
        android:textColor="#353333"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ListView
        android:id="@+id/listView_choose"
        android:layout_width="300dp"
        android:layout_height="375dp"
        android:background="@drawable/custom_breeds"
        android:choiceMode="singleChoice"
        android:padding="10dp"
        android:scrollbarStyle="insideInset"
        android:scrollbarThumbVertical="@drawable/custom_scroll_breed"
        app:layout_constraintBottom_toTopOf="@+id/button_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_title2" />

    <Button
        android:id="@+id/button_home2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/logo"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_title2"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="#282626"
        android:padding="10dp"
        android:text="@string/button_breed_search"
        android:textColor="#A0676B"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_home2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_title2"
        app:layout_constraintVertical_bias="0.96" />

</androidx.constraintlayout.widget.ConstraintLayout>